# DynamicPartitioning2

./: BestRAM.cpp  BestRAM.h  CMakeLists.txt  CPU.h  FirstRAM.cpp  FirstRAM.h  Menu.cpp  Menu.h  PartitionSpace.h  Process.cpp  Process.h  RAM.cpp  RAM.h  README.md  WorstRAM.cpp  WorstRAM.h  main.cpp
